[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosysairsim"
version = "3.3.0"
description = "This package contains simple Python client for Cosys-AirSim. This integrates most API functions over RPC."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Shital Shah", email = "shitals@microsoft.com" },
           { name = "Wouter Jansen", email = "wouter.jansen@uantwerpen.be" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
keywords = ["simulation", "airsim", "api"]
dependencies = [
    "numpy",
    "rpc-msgpack"
]
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/Cosys-Lab/Cosys-AirSim"
Documentation = "https://cosys-lab.github.io/Cosys-AirSim/"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
cosysairsim = ["colormap.npy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cosysairsim*"]



