<?xml version="1.0"?>
<package format="3">
  <name>airsim_interfaces</name>
  <version>3.0.0</version>
  <description>Custom messages for the Coys-AirSim ROS Wrapper.</description>

  <maintainer email="wouter.jansen@uantwerpen.be">Wouter Jansen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
